--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.16",
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
