--- a/docker-compose.yaml.example
+++ b/docker-compose.yaml.example
@@ -13,7 +13,7 @@ services:
     volumes:
       # Since postgresql will save data in /var/lib/postgresql/data,
       #   mount a local folder to let pg save data files in it
-      - ./db_data:/var/lib/postgresql/data
+      # - ./db_data:/var/lib/postgresql/data
       # All .sql files under /docker-entrypoint-initdb.d will be executed
       #   on initialization of /var/lib/postgresql/data
       - ./database:/docker-entrypoint-initdb.d
